@@ -263,12 +263,13 @@ class=\"article-detail-box[\t\n\r ]+clearfix\"" nil t)
 	     (shimbun-end-of-tag "div"))
     (delete-region (match-end 2) (point-max))
     (delete-region (goto-char (point-min)) (match-beginning 2))
-    (when (re-search-forward "<img[\t\n\r ]+\\(?:[^\t\n\r >]+[\t\n\r ]+\\)*\
-\\(?:alt=\"\\([^\"]+\\)\"\\)?[^>]*>" nil t)
+    (when (re-search-forward "<img[\t\n\r ]+\\([^>]*\\)>" nil t)
       (insert "<br>\n")
-      (when (match-beginning 1)
-	(delete-region (goto-char (match-beginning 1)) (match-end 1))
-	(insert "[写真]")))
+      (goto-char (match-beginning 1))
+      (if (re-search-forward "alt=\"\\([^\"]*\\)\"" (match-end 1) t)
+	  (replace-match "alt=\"[写真]\"")
+	(goto-char (match-end 1))
+	(insert " alt=\"[写真]\"")))
     (goto-char (point-min))
     (when (and (re-search-forward "<p[\t\n\r ]+\\(?:[^\t\n\r >]+[\t\n\r ]+\\)*\
 class=\"full-text\"" nil t)
