@@ -1,3 +1,8 @@
+2015-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-nikkangendai.el (shimbun-clear-contents):
+	Improve regexp to search img tag.
+
 2015-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-nikkangendai.el (shimbun-nikkangendai-get-headers-top)
